--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "dayjs": "^1.10.2"
+    "dayjs": "^1.10.2",
+    "mapbox-gl": "^2.0.1"
   }
 }
